2005-03-13 19:40 Mike Park  <mike.park@nasa.gov>

	* src/Makefile.am added plan.c to librefine.a
	* src/plan.c (planFree) to prevent a memory leak, free non-NULL
	array pointers.

2005-03-13 18:08 Mike Park  <mike.park@nasa.gov>

	* src/plan.c (planAddItemWithPriority) added a reallocation
	capability by chunk_size.

2005-03-13 17:42 Mike Park  <mike.park@nasa.gov>

	* src/plan.c (planCreate) Created new object to keep a list of
	planed mesh operations to speed up parallel operation. This list
	or plan is composed of items each with a priority. These
	priorities are sorted to create a ranking.

2005-03-09 18:52 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridResolveTofEdge, gridResolveUVofFace)
	These functions now utilize the CADGeom_ResolveOn* functions to
	limit movement of nodes that are assumed to lie on the entity and
	for whom only parameter values are to be resolved.  In particular,
	CADGeom_ResolveOnFace() is needed to handle Parasolid degeneracies
	where a node may project to a parameter outside of the valid
	range for the Face (but still maintain the same physical coords).
	Case in point is the BoomCones example run as a 9 degree slice.
	Also note that the *WCS versions are used to assume that the
	points are referenced to the global coordinate system not the
	local system of the entity.

	* src/FAKEGeomExtras.c (new functions) added stubs for
	CADGeom_ResolveOnEdgeWCS() and CADGeom_ResolveOnFaceWCS() that
	simply fallback to simple FAKEGeom projections.

2005-02-28 10:02 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridfortran.c (gridtestcadparameters_) added extra diagnostics
	if mismatch is detected from parameter recovery.  Only impacts if
        reportMismatch = TRUE.

2005-02-28 09:02 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLineSearchT) added parallel check
	to return NULL if envoked for a ghost node.

2005-02-27 23:32 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridcreate_) called gridSetCostConstraint to