@@ -7,6 +7,8 @@ Start Builds!!!!!
 
 --Major refactoring
 
+correctly add two faced cells to swap plan
+
 Adj node2item memory leak
 
 Make a queue (plan) of boundary mesh operations and use it to speed up
